<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/cor_fundo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListarActivity">


    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnLogout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <!-- Botão de Logout -->

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/sair"
        app:layout_constraintBottom_toTopOf="@+id/titulolistagem"
        app:layout_constraintEnd_toStartOf="@+id/Welcome"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/btnLogoutListar"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="11dp"
        android:text="@string/nova"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/titulolistagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toEndOf="@+id/Welcome"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Título Principal -->
    <TextView
        android:id="@+id/titulolistagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/titulolistagem"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Welcome" />


    <LinearLayout
        android:id="@+id/cabecalhoTabela"
        android:layout_width="387dp"
        android:layout_height="34dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/listarOs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulolistagem"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/txtDatalistar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/data"
            android:textStyle="bold"
            android:paddingStart="15dp"/>

        <TextView
            android:id="@+id/txtNumeroOSlistar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/id_da_os"
            android:textStyle="bold"
            android:paddingStart="5dp"/>

        <TextView
            android:id="@+id/txtInformadolistar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/informado"
            android:textStyle="bold"
            android:paddingStart="15dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listarOs"
        android:layout_width="383dp"
        android:layout_height="0dp"
        android:layout_marginTop="230dp"
        android:contentDescription="@string/text_view"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904" />



</androidx.constraintlayout.widget.ConstraintLayout>