<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/txtData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/data"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txtNumeroOS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/id_da_os"
            android:textStyle="bold"
            android:paddingStart="5dp"/>

        <TextView
            android:id="@+id/txtInformado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/informado"
            android:textStyle="bold"
            android:paddingStart="5dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
